--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
                     <images>
                         <image>
                             <name>${docker.image.prefix}/${docker.image.name}</name>
+                            <alias>spring-docker</alias>
                             <build>
                                 <dockerFileDir>${project.basedir}/target/dockerfile/</dockerFileDir>
                                 <!--copies artifact to docker build dir in target-->
@@ -89,6 +90,7 @@
                 <version>1.5</version>
                 <executions>
                     <execution>
+                    <!--  This runs before the package phase-->
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>execute</goal>
